--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
-name = "cstgs"
+name = "py-cstgs"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "cstgs>=0.1.0",
     "polars>=1.31.0",
     "pydantic>=2.11.7",
 ]
