--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "py-cstgs"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.1.3"
+description = "Counting and Sampling Triangles from a Graph Stream"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
